--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ img{vertical-align: middle;}
 .wrap{width: 100%; height: auto;}
 
 /* Slideshow container */
-.slideshow-container{max-width: 1000px; position: relative; margin: auto; border: 1px solid; overflow: hidden; height: 400px;}
+.slideshow-container{max-width: 1000px; position: relative; margin: 10px auto; border: 1px solid; overflow: hidden; height: 400px;}
 
 /* Next & Previous button */
 .img-btn{display: flex; justify-content: space-between; position: absolute; top: 50%; width: 100%;}
@@ -18,10 +18,11 @@ img{vertical-align: middle;}
 .text{color: #fff; font-size: 15px; position: absolute; bottom: 8px; width: 100%; text-align: center;}
 
 /* number text */
-.numbertext{position: absolute; top: 10px; left: 10px; color: #fff; font-size: 15px;}
+.numbertext{position: absolute; top: 10px; left: 10px; color: #fff; font-size: 15px; z-index: 10;}
 
 /* images Style Code */
-img{width: 100%; height: auto; margin: auto; background-size: cover;}
+
+img{width: 100%; height: auto; margin: auto; object-fit: cover; position: absolute; top: 50%; transform: translateY(-40%);}
 
 /* The Dot Style Code */
 .dot-wrap{display: flex; justify-content: center; margin-top: 10px;}
